--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 database.driverClassName=com.mysql.jdbc.Driver
 database.dialect=org.hibernate.dialect.MySQLDialect
-database.mysql_db_host=127.0.0.1
+database.mysql_db_host=127.7.227.2
 database.mysql_db_port=3306
 database.app_name=exchangemarket
-database.username=root
+database.username=
 database.password=
